fix: make terms and conditon container position relative to prevent jump

--- a/src/Views/Form/Templates/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/form.scss
@@ -667,6 +667,7 @@ p {
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
+		position: relative;
 
 		input[type='checkbox'] {
 			bottom: 14px;
